@@ -16,9 +16,9 @@
 Andrew Evans<br>
 Chris Bitmead<br>
 <a href="http://www.cythrawl.org/professional">Hilary Catherall</a><br>
-Manuel Pereira</p>
-Sander Verbruggen</p>
-Todd Davis</p>
+Manuel Pereira</br>
+Sander Verbruggen</br>
+Todd Davis</br>
 Chr. Clemens Lee </p>
 
 	<!--#include virtual="footer.shtml"-->
